# link

./: .gitignore  .gitlab-ci.yml  .prettierrc  README.md  content.txt  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: clippy.yaml  contract-check.yaml  fmt.yaml  spellcheck.yaml  test.yaml
contract/: Cargo.toml  lib.rs
contract/.config/: cargo_spellcheck.dic
contracts/: .gitignore  Cargo.toml  build-all.sh  build.sh  config.json  package.json  postinstall.sh  rust-toolchain.toml  test-all.sh  test.sh  tsconfig.json
contracts/deployments/greeter/: greeter.contract  greeter.wasm
contracts/deployments/link/: development.ts  link.contract  link.json  link.wasm  pop-network.ts
contracts/pinkpsp34/: Cargo.toml  lib.rs
contracts/pinkpsp34/minting/: Cargo.toml  internal.rs  lib.rs  minting.rs  traits.rs
contracts/pinkrmrk/: .gitignore  Cargo.toml  lib.rs
contracts/pinkrobot/: Cargo.toml  lib.rs
contracts/scripts/: deploy.ts  script.template.ts
contracts/scripts/utils/: getDeploymentData.ts  initPolkadotJs.ts  writeContractAddresses.ts
contracts/src/link/: Cargo.toml  lib.rs
contracts/tests/: pinkrobot.spec.ts
contracts/typed-contracts/build-extrinsic/: link.ts
contracts/typed-contracts/constructors/: greeter.ts  link.ts
contracts/typed-contracts/contract-info/: greeter.ts  link.ts
contracts/typed-contracts/contracts/: link.ts
contracts/typed-contracts/data/: link.json
contracts/typed-contracts/event-data/: link.json
contracts/typed-contracts/event-types/: link.ts
contracts/typed-contracts/events/: link.ts
contracts/typed-contracts/mixed-methods/: link.ts
contracts/typed-contracts/query/: link.ts
contracts/typed-contracts/tx-sign-and-send/: link.ts
contracts/typed-contracts/types-arguments/: link.ts
contracts/typed-contracts/types-returns/: link.ts
frontend/: .env  .env.dist  .eslintcache  .eslintrc.cjs  .prettierrc  README.md  components.json  index.html  metadata.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Resolver.tsx  chainspec.json  global.css  index.tsx  main.tsx  metadata.json  metadata_old.json  metadata_psp34.json  vite-env.d.ts
frontend/src/assets/: resolve.json  resolve2.json
frontend/src/components/: AccountsDropdown.tsx  ArtistSelector.tsx  Button.tsx  ConnectWallet.tsx  CostEstimations.tsx  DryRunResult.tsx  Error.tsx  Form.tsx  FormContainer.tsx  Gallery.tsx  GenerateCustomUploadForm.tsx  GenerateForm.tsx  Header.tsx  LinksOverview.tsx  Loader.tsx  Modal.tsx  ModelSelector.tsx  NewUserGuide.tsx  PinkContainer.tsx  PinkTabs.tsx  StyleSelector.tsx  SubmitResult.tsx  Tab.tsx  Tweet.tsx  index.ts
frontend/src/components/Notifications/: Notifications.tsx  Snackbar.tsx  index.ts
frontend/src/components/ui/: button.tsx  card.tsx  form.tsx  input.tsx
frontend/src/components/web3/: chain-info.tsx  connect-button.tsx  footer.tsx  link-contract-interactions.tsx  resolve.tsx
frontend/src/config/: environment.ts  get-supported-chains.ts  get-url.ts
frontend/src/const/: index.ts
frontend/src/contexts/: Accounts.tsx  Caller.tsx  Chain.tsx  Estimation.tsx  LinkContract.tsx  PinkContract.tsx  PinkPsp34Contract.tsx  UIContext.tsx  index.ts
frontend/src/deployments/: deployments.ts  link.json
frontend/src/helpers/: output.ts
frontend/src/hooks/: index.ts  useDryRun.ts  useLinkContract.ts  useMintHandler.ts  usePinkContract.ts  usePinkPsp34Contract.ts  useSubmitHandler.ts  useUI.ts
frontend/src/lib/: converter.ts  formatBalance.ts
frontend/src/types/: Balances.ts  LinkContract.ts  PinkTypes.ts  UI.ts  index.ts
frontend/src/util/: index.ts
frontend/src/utils/: contract-tx-with-toast.tsx
patches/: @scio-labs__use-inkathon@0.9.0.patch
