[package]
name = "link"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink.git", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink.git", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink.git", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink.git", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink.git", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink.git", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "link"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
