[package]
name = "link"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0-rc" }

[lib]
name = "link"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
