[package]
name = "link"
version = "0.1.0"
authors = ["Use Ink <ink@r0gue.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
name = "link"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
